# capnweb

./: .gitignore
python/: PUBLISH.md  README.md  connection_performance_results.json  debug_parallel_test.py  demo_resilient_api.py  performance_test.py  pyproject.toml  requirements.txt  setup.py  simple_performance_test.py  test_new_implementation.py  test_resilient_features.py  ultra_performance_results.json  ultra_performance_test.py
python/backup_original/: rpc.py
python/capnweb/: __init__.py  batch.py  connection.py  core.py  rpc.py  serialize.py  websocket.py
python/examples/: batch_pipelining_client.py  batch_pipelining_server.py  demo_core.py  example_basic.py  example_enhanced.py  readme_demo.py  test_e2e.py
python/tests/: test_basic.py  test_batch.py  test_enhanced.py
