[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capnweb-python"
version = "0.1.0"
description = "Cap'n Web Python implementation with enterprise-grade resilience"
authors = [
    {name = "Cap'n Web Python Team"}
]
dependencies = [
    "websockets>=12.0",
]
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["capnweb"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true